add more description, add logo

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="text-center">
   <h1>Welcome to Milliways</h1>
-
+  <img src="/static/images/milliways.svg" class="img-fluid" alt="logo" />
   <p> Website under construction</p>
   <p> visit <a href="https://wiki.milliways.info">https://wiki.milliways.info</a> for more information</p>
 </div>
